// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOppilaitosByFormValues returns correct oppilaitos given form values 1`] = `
{
  "esikatselu": false,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "logo": undefined,
  "metadata": {
    "akatemioita": 1,
    "esittely": {
      "fi": "<p><em>Fi esittely</em></p>",
      "sv": "<p><em>Sv esittely</em></p>",
    },
    "hakijapalveluidenYhteystiedot": {
      "kayntiosoite": {
        "osoite": {
          "fi": "Fi osoite",
          "sv": "Sv osoite",
        },
        "postinumeroKoodiUri": "postinumero_1#1",
      },
      "nimi": {
        "fi": "Hakijapalveluiden nimi",
        "sv": "Hakijapalveluiden nimi sv",
      },
      "postiosoite": {
        "osoite": {
          "fi": "Fi osoite",
          "sv": "Sv osoite",
        },
        "postinumeroKoodiUri": "postinumero_1#1",
      },
      "puhelinnumero": {
        "fi": "1234",
        "sv": "5678",
      },
      "sahkoposti": {
        "fi": "fi@sahkoposti.fi",
        "sv": "sv@sahkoposti.sv",
      },
    },
    "jarjestaaUrheilijanAmmKoulutusta": false,
    "kampuksia": 3,
    "korkeakouluja": 5,
    "opiskelijoita": 100,
    "some": undefined,
    "tiedekuntia": 4,
    "tietoaOpiskelusta": [
      {
        "otsikkoKoodiUri": "osio_1#1",
        "teksti": {
          "fi": "<p>Fi tiedot</p>",
          "sv": "<p>Sv tiedot</p>",
        },
      },
    ],
    "toimipisteita": 9,
    "wwwSivu": {
      "nimi": {
        "fi": "Verkkosivu fi",
        "sv": "Verkkosivu sv",
      },
      "url": {
        "fi": "www.verkkosivu.fi",
        "sv": "www.verkkosivu.sv",
      },
    },
    "yksikoita": 2,
  },
  "muokkaaja": "1.1.1.1",
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`getOppilaitosByFormValues returns only some keys with values on them 1`] = `
{
  "esikatselu": false,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "logo": undefined,
  "metadata": {
    "akatemioita": null,
    "esittely": {
      "fi": "<p><em>Fi esittely</em></p>",
      "sv": "<p><em>Sv esittely</em></p>",
    },
    "hakijapalveluidenYhteystiedot": {
      "kayntiosoite": {
        "osoite": {
          "fi": "Fi osoite",
          "sv": "Sv osoite",
        },
        "postinumeroKoodiUri": "postinumero_1#1",
      },
      "nimi": {
        "fi": "Hakijapalveluiden nimi",
        "sv": "Hakijapalveluiden nimi sv",
      },
      "postiosoite": {
        "osoite": {
          "fi": "Fi osoite",
          "sv": "Sv osoite",
        },
        "postinumeroKoodiUri": "postinumero_1#1",
      },
      "puhelinnumero": {
        "fi": "1234",
        "sv": "5678",
      },
      "sahkoposti": {
        "fi": "fi@sahkoposti.fi",
        "sv": "sv@sahkoposti.sv",
      },
    },
    "jarjestaaUrheilijanAmmKoulutusta": undefined,
    "kampuksia": null,
    "korkeakouluja": null,
    "opiskelijoita": null,
    "some": {
      "sosiaalinenmedia_2": "https://youtube.com/RuhtinasNukettaja",
    },
    "tiedekuntia": null,
    "tietoaOpiskelusta": [
      {
        "otsikkoKoodiUri": "osio_1#1",
        "teksti": {
          "fi": "<p>Fi tiedot</p>",
          "sv": "<p>Sv tiedot</p>",
        },
      },
    ],
    "toimipisteita": null,
    "wwwSivu": null,
    "yksikoita": null,
  },
  "muokkaaja": "1.1.1.1",
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;
